Configurando posições da navbar ainda

--- a/projeto/cliente/templates/cliente_list.html
+++ b/projeto/cliente/templates/cliente_list.html
@@ -8,7 +8,16 @@
     }
 </style>
 
-<div class="class page-header">   
+<div class="class page-header">
+    <!-- <h2>Lista de Clientes
+        <span class="pull-right">
+            <a href="{% url 'cliente:cliente_add' %}">
+                <button type="button" class="btn btn-primary">
+                    <span class="fa fa-plus"></span>Adicionar
+                </button>
+            </a>
+        </span>
+    </h2> -->
     <div class="float-right">
         <a href="{% url 'cliente:cliente_add' %}">
             <button type="button" class="button button1">
