Avalista inserido em cliente_form.html

--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -318,6 +318,13 @@
 
     <div id="Page4" class="tabcontent">         
         <div class="row">
+            <div class="col-sm-5">                    
+                <div class="form-group" >                
+                    <label for="" class="required" >{{form.avalista.label}} </label>        
+                    {% render_field form.avalista class="form-control"  %}
+                </div>
+            </div>
+            <br>
             <div class="col-sm-12">
                 <div class="form-group">
                     <label for="">{{form.anotacoes.label}}</label>
