--- a/projeto/cliente/templates/cliente_list.html
+++ b/projeto/cliente/templates/cliente_list.html
@@ -2,22 +2,7 @@
 
 {% block content %}
 
-<style>
-    thead{
-        background-color: rgb(165, 165, 165);
-    }
-</style>
-
 <div class="class page-header">
-    <!-- <h2>Lista de Clientes
-        <span class="pull-right">
-            <a href="{% url 'cliente:cliente_add' %}">
-                <button type="button" class="btn btn-primary">
-                    <span class="fa fa-plus"></span>Adicionar
-                </button>
-            </a>
-        </span>
-    </h2> -->
     <div class="float-right">
         <a href="{% url 'cliente:cliente_add' %}">
             <button type="button" class="button button1">
@@ -37,19 +22,20 @@
                     <th>Nome</th>                    
                     <th>RG</th>
                     <th>Data de Nascimento</th>                                        
-                    <th>CPF</th>                                   
+                    <th>CPF</th>   
+                    <th></th>                                
                 </tr>
             </thead>
             <tbody>
                 {% for object in object_list  %}   
                 <tr>
-                    <td> 
-                        <a href="{{ object.get_absolute_url}}">{{object.nome}}</a> <!--SUbstitui a forma comentada na linha abaixo comentada-->
-                        <!-- <a href="{% url 'cliente:cliente_detail' object.pk %}">{{object.nome}}</a> -->
-                    </td>                                        
+                    <td>{{object.nome}}</td>                                        
                     <td>{{ object.rg }}</td>
                     <td>{{ object.data_nasc }}</td>                                     
-                    <td>{{ object.cpf }}</td>                       
+                    <td>{{ object.cpf }}</td> 
+                    <td style="text-align:center"> 
+                        <a href="{{ object.get_absolute_url}}" ><button class="button button2">Gerenciar</button></a> 
+                    </td>                    
                 </tr>
                 {% endfor %}
             </tbody>
