--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -219,8 +219,9 @@
 			ano++				
 		}	
 
-		if ((i+1)%3 != 0){
+		
 		carne.innerHTML +=
+		`&nbsp<br>`+
 			`
 			<table cellspacing="0" cellpadding="0" border="1">
 				<!--1º linha-->
@@ -299,10 +300,9 @@
 				</tr>	
 				<!--5º linha-->			
 				<tr>
-				
 					<td width="15%">
 						<p class="content left">&nbsp(-) Descontos </p>							
-						<p class="content left">&nbsp </p>						
+											
 					</td>
 					<td width="1px"></td>
 					<td colspan="5" rowspan="4">
@@ -313,31 +313,26 @@
 					</td>
 					<td width="15%">
 						<p class="content left">&nbsp(-) Descontos </p>
-						<p class="content left">&nbsp </p>					
 					</td>
 				</tr>	
 				<!--6º linha-->				
 				<tr>
 					<td width="15%">
-						<p class="content left">&nbsp(+) Acréscimos </p>							
-						<p class="content left">&nbsp </p>
+						<p class="content left">&nbsp(+) Acréscimos </p>
 					</td>
 					<td width="1px"></td>
 					<td width="15%">
-						<p class="content left">&nbsp(+) Acréscimos </p>							
-						<p class="content left">&nbsp </p>						
+						<p class="content left">&nbsp(+) Acréscimos </p>
 					</td>
 				</tr>
 				<!--7º linha-->
 				<tr>
 					<td width="15%">
-						<p class="content left">&nbsp(=) Valor Pago  </p>							
-						<p class="content left">&nbsp </p>													
+						<p class="content left">&nbsp(=) Valor Pago  </p>
 					</td>
 					<td width="1px"></td>
 					<td width="15%">
-						<p class="content left">&nbsp(=) Valor Pago  </p>							
-						<p class="content left">&nbsp </p>							
+						<p class="content left">&nbsp(=) Valor Pago  </p>	
 					</td>
 				</tr>
 				<!--8º linha-->
@@ -366,7 +361,6 @@
 						<span class="title">&nbspSacado: ${cliente_nome} - CPF: ${cpf} </span><br>						
 						<p class="text">&nbspEndereço: ${rua} - ${numero_casa} - ${bairro} - ${uf} - ${cep}</p>
 						<p class="text">&nbspAvalista: ${avalista} - &nbspCPF: ${cpf_avalista}</p>
-												
 					</td>
 					<td width="15%">
 						<span class="title">&nbspOutros Acres.</span>
@@ -374,167 +368,8 @@
 						<span class="text"></span>
 					</td>
 				</tr>
-			</table><br>				
-			`
-		}
-		else {
-			carne.innerHTML += 
-			`
-			<table cellspacing="0" cellpadding="0" border="1">
-				<!--1º linha-->
-				<tr>
-					<td width="15%" >
-						<p class="content testando"><b>CREDCOOP</b></p>							
-						<p class="content testando">(84) 4131-3210</p>
-					</td>
-					<td width="1px"></td>
-					<td width="39%" colspan="6">
-						<p class="content testando"><b>CREDCOOP</b></p>							
-						<p class="content testando">(84) 4131-3210</p>						
-					</td>						
-				</tr>
-				<!--2º linha-->
-				<tr>					
-					<td width="15%">							
-						<span class="title">&nbspVencimento</span>							
-						<br/>						
-						<p class="content right text">&nbsp${dia}/${mes}/${ano}&nbsp</p>	
-													
-					</td>
-					<td width="1px" ></td>
-					<td width="70%" colspan="5">
-						<p class="content "><b>&nbsp Local de Pagamento: ESCRITÓRIO</b></p>	
-						
-					</td>
-					<td width="45%">
-						<span class="title">&nbspVencimento</span>
-						<br/>				
-						<p class="content right text">&nbsp${dia}/${mes}/${ano}&nbsp</p>
-					
-					</td>
-				</tr>
-				<!--3º linha-->
-				<tr>
-					<td width="15%">
-						<span class="title">&nbspValor do Documento</span>
-						<br/>
-						<p class="content right">&nbspR$ ${"{{object.valor_prestacao}}"}&nbsp</p>
-					</td>
-					<td width="1px"></td>
-					<td width="17%" colspan="5">
-						<span class="title">&nbsp Nome do Cedente</span>
-						<br/>
-						<p class="content left">&nbsp CREDCOOP</p>
-					</td>
-					<td width="15%">
-						<span class="title">&nbspValor do Documento</span>
-						<br/>
-						<p class="content right">&nbspR$ ${"{{object.valor_prestacao}}"}&nbsp</p>
-					</td>
-				</tr>
-				<!--4º linha-->
-				<tr>
-					<td width="15%">						
-						
-						<p class="content left">&nbsp<b>PARCELA: ${contador_parcela}/${aux_qtd_parccela}<b></p>
-					</td>
-					<td width="1px">
-						<span class="title"></span>
-						<br/>
-						<p class="content center"></p>
-					</td>
-					<td width="50%" colspan="4">
-						<span class="title">&nbsp Dt. Emissão: </span><br>							
-						<p class="content left">&nbsp ${data_emissao}</p>
-					</td>		
-					<td>
-						<span class="title"></span>
-						<br/>
-						<p class="content center"></p>
-					</td>
-					<td width="30%">
-						<p class="content left">&nbsp<b>PARCELA: ${contador_parcela}/${aux_qtd_parccela}<b></p>
-					</td>
-				</tr>	
-				<!--5º linha-->			
-				<tr>
-				
-					<td width="15%">
-						<p class="content left">&nbsp(-) Descontos </p>							
-						<p class="content left">&nbsp </p>						
-					</td>
-					<td width="1px"></td>
-					<td colspan="5" rowspan="4">
-						<span class="title2">&nbsp Instruções<br/>
-						&nbsp MULTA DE R$: ${valor_multa} APÓS: ${dia}/${mes}/${ano}<br/>
-						&nbsp JUROS DE R$: ${valor_juros_dia} AO DIA<br/>
-						</span>				
-					</td>
-					<td width="15%">
-						<p class="content left">&nbsp(-) Descontos </p>
-						<p class="content left">&nbsp </p>					
-					</td>
-				</tr>	
-				<!--6º linha-->				
-				<tr>
-					<td width="15%">
-						<p class="content left">&nbsp(+) Acréscimos </p>							
-						<p class="content left">&nbsp </p>
-					</td>
-					<td width="1px"></td>
-					<td width="15%">
-						<p class="content left">&nbsp(+) Acréscimos </p>							
-						<p class="content left">&nbsp </p>						
-					</td>
-				</tr>
-				<!--7º linha-->
-				<tr>
-					<td width="15%">
-						<p class="content left">&nbsp(=) Valor Pago  </p>							
-						<p class="content left">&nbsp </p>													
-					</td>
-					<td width="1px"></td>
-					<td width="15%">
-						<p class="content left">&nbsp(=) Valor Pago  </p>							
-						<p class="content left">&nbsp </p>							
-					</td>
-				</tr>
-				<!--8º linha-->
-				<tr>
-					<td width="15%">
-						<p class="content left"><b>&nbspVisto do Operador</b></p>							
-						<p class="content center">Pago em:</p>						
-						<p class="content left">&nbsp&nbsp&nbsp&nbsp ____/____/____ </p>						
-					</td>
-					<td width="1px"></td>
-					<td width="15%">
-						<p class="content left"><b>&nbspVisto do Operador</b></p>							
-						<p class="content center">Pago em:</p>						
-						<p class="content left">&nbsp&nbsp&nbsp&nbsp ____/____/____ </p>
-					</td>
-				</tr>
-				<!--9º linha-->
-				<tr>
-					<td width="15%">
-						<span class="title">Outros Acres.</span>
-						<br/>
-						<span class="text"></span>
-					</td>
-					<td width="1px"></td>
-					<td width="39%" colspan="5">
-						<span class="title">Sacado: ${cliente_nome} - CPF: ${cpf} </span><br>
-						<br/>
-						<span class="text">Endereço:  </span><br>							
-					</td>
-					<td width="15%">
-						<span class="title">Outros Acres.</span>
-						<br/>
-						<span class="text"></span>
-					</td>
-				</tr>
-			</table><br>				
-			`	
-			}
+			</table>				
+			`+`&nbsp<br>`
 		}			
 	}
 	</script>
