--- a/projeto/emprestimo/templates/emprestimo_detail.html
+++ b/projeto/emprestimo/templates/emprestimo_detail.html
@@ -3,17 +3,7 @@
 {% block content %}
 
 <a href="{% url 'emprestimo:emprestimo_list' %}">Voltar</a>
-<h1>Detalhes do Emprestimo de {{ object.cliente }}
-    <span class="pull-right">
-        <a href="{% url 'emprestimo:emprestimo_edit' object.pk %}">
-            <button type="button" class="btn btn-success">
-                <span class="fa fa-pencil">Editar</span>
-            </button>
-        </a>
-        <a href="{% url 'emprestimo:emprestimo_impress' object.pk %}" class="btn btn-primary">Imprimir</a>       
-        
-    </span>
-</h1>
+<h1>Detalhes do Emprestimo de {{ object.cliente }}</h1>
 
 <div class="col-sm-6">
     <table class="table table-user-information">
@@ -50,5 +40,27 @@
         </tbody>
     </table>
 </div>
+
+
+<span class="pull-right">
+    <td style="text-align:center"> 
+        <a href="{% url 'emprestimo:emprestimo_edit' object.pk %}">
+            <button class="button button5">Editar</button>
+        </a> 
+    </td> 
+  
+    <td style="text-align:center"> 
+        <a href="{% url 'emprestimo:emprestimo_impress' object.pk %}" >
+            <button class="button button2">Carnê</button>
+        </a> 
+    </td> 
+    
+    <td style="text-align:center"> 
+        <a href="{% url 'emprestimo:emprestimo_promissoria' object.pk %}" >
+            <button class="button button3">Promissória</button>
+        </a> 
+    </td> 
+</span>
+
 
 {% endblock content %}
