Parte da promissoria concluida+

--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -320,8 +320,8 @@
                         <a class="direita"><b>R$: ${"{{object.valor_prestacao}}"} &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</b></a><a>&nbsp</a><br>
                         <a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspAo(s) &nbsp${dia} de ${mes} de ${ano} pagarei por esta única via de 
                         <b>NOTA PROMISSÓRIA<br></b>							
-                        <a>&nbsp&nbspa JOSIMERIO DE ABREU SILVA CPF/CNPJ 02938827466 OU À SUA ORDEM A QUANTIA DE ${testinho}</a><br>							
-                        <a>&nbsp&nbsp real DE ${real}</a><br>							
+                        <a>&nbsp&nbspa JOSIMERIO DE ABREU SILVA CPF/CNPJ 02938827466 OU À SUA ORDEM A QUANTIA <br>&nbsp DE ${real} reais</a><br>							
+                        </a><br>							
                         <a>&nbsp&nbsp cent DE ${centavos}</a><br>							
                         CREDCOOP <br>							
                         CREDCOOP <br>							
