Promissoria completa-faltando ajustes pequenos+

--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -81,15 +81,16 @@
         
     }
     .fontmaior{
-        font-size: 24px;
+        font-size: 26px;
+        margin-left: 5px;
     }
     .fontmaior1{
-        font-size: 24px;
+        font-size: 26px;
         padding: right;
         margin: 50px;  
     }
     .fontmenor{
-        font-size: 15px;
+        font-size: 17px;
         padding: 10px; 
         margin: 8px;   
         
@@ -227,7 +228,7 @@ window.onload = function imprimir(){
             <a class="test1">________________________ &nbsp&nbsp&nbsp</a>
             <a class="test1">________________________ &nbsp&nbsp&nbsp</a>
             <a class="ait"> 
-                <b class="fontmaior">Nº</b> <b class="bordinha fontmaior"> &nbsp ${contador_parcela}/${aux_qtd_parccela} &nbsp</b>  
+                <b class = "fontmaior" >&nbsp&nbsp&nbsp&nbsp&nbspNº</b> <b class="bordinha fontmaior"> &nbsp ${contador_parcela}/${aux_qtd_parccela} &nbsp</b>  
                 <b class="fontmenor"> Vencimento: ${dia} de ${mes} de ${ano} </b> 
                 <b class="fontmaior1">
                     R$:<b class="bordinha fontmaior1">&nbsp${dinheiro}&nbsp</b> 
@@ -262,6 +263,11 @@ window.onload = function imprimir(){
                     ___________________________<br>
                     ASSINATURA DO EMITENTE
                 </p>
+                <br>
+                <a>&nbsp&nbsp&nbsp</a><br>
+                <a>&nbsp&nbsp&nbsp</a><br>
+                <a>&nbsp&nbsp&nbsp</a><br>
+                <a>&nbsp&nbsp&nbsp</a><br>
                    
                   
             </a> 
